--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.23",
+    "@types/react": "^18.0.0",
+    "typescript": "^4.6.3"
   }
 }
