--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
-  "name": "nextjs-typescript-eslint-prettier-husky",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.23",
-    "@types/react": "^18.0.0",
-    "typescript": "^4.6.3"
-  }
+	"name": "nextjs-typescript-eslint-prettier-husky",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"format": "prettier --write ./**/.{ts, tsx, md, mdx} --no-error-on-unmatched-pattern",
+		"lint": "eslint ./**/*.{ts, tsx} --no-error-on-unmatched-pattern",
+		"prepare": "husky install",
+		"precommit": "pretty-quick --staged"
+	},
+	"dependencies": {
+		"next": "12.1.4",
+		"react": "18.0.0",
+		"react-dom": "18.0.0"
+	},
+	"devDependencies": {
+		"@types/node": "^17.0.23",
+		"@types/react": "^18.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.18.0",
+		"@typescript-eslint/parser": "^5.18.0",
+		"eslint": "^8.13.0",
+		"eslint-plugin-react": "^7.29.4",
+		"lint-staged": "^12.3.7",
+		"prettier": "^2.6.2",
+		"pretty-quick": "^3.1.3",
+		"typescript": "^4.6.3",
+		"husky": "^7.0.0"
+	}
 }
