--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 		"start": "next start",
 		"format": "prettier --write ./**/.{ts, tsx, md, mdx} --no-error-on-unmatched-pattern",
 		"lint": "eslint ./**/*.{ts, tsx} --no-error-on-unmatched-pattern",
-		"prepare": "husky install",
-		"precommit": "pretty-quick --staged"
+		"prepare": "husky install"
 	},
 	"dependencies": {
 		"next": "12.1.4",
@@ -28,5 +27,9 @@
 		"pretty-quick": "^3.1.3",
 		"typescript": "^4.6.3",
 		"husky": "^7.0.0"
+	},
+	"lint-staged": {
+		"*.{js, tsx, ts, tsx}": "eslint --cache --fix",
+		"*.--no-error-on-unmatched-pattern": "prettier --write"
 	}
 }
